fixed scrollbars on code snippets

--- a/src/components/Root.css
+++ b/src/components/Root.css
@@ -37,16 +37,29 @@ pre {
   transition: all .3s;
 }
 
+pre::-webkit-scrollbar {
+  height: 8px;
+}
+
+pre::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #4da487;
+}
+
+pre::-webkit-scrollbar-thumb-hover {
+  background-color: #bbbbbb;
+}
+
 pre > code {
-  font-size: 0.9em;
+  font-size: 1em;
 }
 
 code {
   background: #2b2b2b;
   padding: .1em .4em;
-  border-radius: 2px;
+  border-radius: 4px;
   color: #e6d1a1;
-  font-size: .8em;
+  font-size: 1em;
 }
 
 a {
